<resources>
    <string name="app_name">TechnoparkProject</string>
    <string name="toolbar_home_text">Лента</string>
    <string name="toolbar_playlist_text">Плейлист</string>
    <string name="toolbar_record_text">Запись</string>
    <string name="toolbar_settings_text">Настройки</string>
    <string name="toolbar_personal_page_text">User Name</string>
    <string name="toolbar_password_text">Изменить пароль</string>
    <string name="toolbar_language_text">Изменить язык</string>
    <string name="fragment_home_name">home</string>
    <string name="fragment_playlist_name">playlist</string>
    <string name="fragment_record_name">record</string>
    <string name="fragment_settings_name">settings</string>
    <string name="fragment_personal_page_name">personal_page</string>
    <string name="fragment_password_name">password</string>
    <string name="fragment_language_name">language</string>
    <string name="et_new_nickname">Новый никнэйм</string>
    <string name="button_new_avatar">НОВОЕ ФОТО ПРОФИЛЯ</string>
    <string name="et_new_email">Новый e-mail</string>
    <string name="tv_change_password">Изменить пароль</string>
    <string name="tv_change_language">Изменить язык</string>
    <string name="et_enter_current_password">Введите текущий пароль</string>
    <string name="et_enter_new_password">Введите новый пароль</string>
    <string name="repeat_new_password">Повторите новый пароль</string>
    <string name="button_settings_russian">Русский</string>
    <string name="button_settings_english">English</string>
    <string name="button_settings_itd">И так далее</string>
    <string name="frag_change_language">CHANGE LANGUAGE</string>
    <string name="frag_change_password">CHANGE PASSWORD</string>
    <string name="current_fragment">Current fragment</string>
    <string name="record_image">recordTopic image</string>
    <string name="why_you_search">что хотите найти?</string>
    <string name="add_to_queue">Добавить в очередь</string>
    <string name="download">Загрузить</string>
    <string name="record_logo">логотип записи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_record_fragment">Record fragment</string>
    <string name="text_record_permission_denied">Вы отказались предоставить разрешение на запись. Вы можете предоставить его в настройках.</string>
    <string name="channel_audio_app">Voice-it channel</string>
    <string name="channel_description">Notifications of Voice-it</string>
    <string name="audio_record">Идет запись</string>
    <string name="default_record_name">Моя запись</string>
    <string name="default_topic_name">Мой Топик</string>
    <string name="record_hint_text">Запись</string>
    <string name="topic_hint_text">Топик</string>
    <string name="cancel_save_record">Отменить сохранение аудио</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="enter_topic">Введите топик</string>
    <string name="enter_record_name">Введите название</string>
    <string name="fragment_register_name">register</string>
    <string name="toolbar_register_text">Регистрация</string>
    <string name="voice_it">voice it</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="or_use_social_network">    or use social network    </string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="username">Username</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="confirm_e_mail_address">Confirm e-mail address</string>
    <string name="fragment_start_name">start</string>
    <string name="fragment_registration_name">registration</string>
    <string name="fragment_login">login</string>\
    <string name="fragment_login_name">login</string>
    <string name="toolbar_login_text">Вход</string>
    <string name="login_btn">Войти</string>
    <string name="password">Password</string>
    <string name="publications">Публикации</string>
    <string name="count_publications">0</string>
    <string name="subscribers">Подписчики</string>
    <string name="subscriptions">Подписки</string>
    <string name="enter_your_current_password">Enter your current password!</string>
    <string name="enter_your_parrword">Enter your new password!</string>
    <string name="repeat_answer">Repeat your new password!</string>
    <string name="password_dont_match">Your passwords don\'t match!</string>
    <string name="password_update">Password updated</string>
    <string name="error_password">Error password not updated</string>
    <string name="error_auth">Error auth failed</string>
    <string name="error_no_connection">Проверьте подключение к сети</string>
    <string name="no_available_data">Данных по запросу нет</string>
    <string name="enter_your_email">Enter your email!</string>
    <string name="enter_your_password">Enter your password!</string>
    <string name="please_wait">Please wait...</string>
    <string name="s1">Successfully sign in</string>
    <string name="s2">Sign in fail!</string>
    <string name="s3">Email is required!</string>
    <string name="s4">Password is required!</string>
    <string name="s5">Please provide valid email!</string>
    <string name="s6">Min password length should be 6 characters!</string>
    <string name="s7">Successfully logout</string>
    <string name="s8">Sign up fail!</string>
    <string name="s9">Successfully registered</string>
    <string name="go_to_account">Перейти на аккаунт</string>
    <string name="fragment_another_account_name">another_account</string>
    <string name="subscribe">Подписаться</string>
    <string name="tv_change_email">изменить e-mail</string>
    <string name="et_enter_new_email">Введите новый e-mail</string>
    <string name="fragment_email_name">email</string>
    <string name="toolbar_email_text">Изменить e-mail</string>
    <string name="enter_your_new_email">Введите новый e-mail!</string>
    <string name="email_update">E-mail successfully updated</string>
    <string name="username_updated">UserName successfully updated!</string>
    <string name="error_username_updated">Error updating userame</string>
    <string name="in_development">Находится в разработке</string>
    <string name="ok_wait">ок, жду</string>
</resources>
