<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56sp"
        android:layout_marginBottom="56sp"
        android:orientation="vertical"
        android:tag="@string/frag_change_password">

    <EditText
            style="@style/Button"
            android:autofillHints="username"
            android:inputType="textPassword"
            android:hint="@string/et_enter_current_password" />

    <EditText
            style="@style/Button"
            android:autofillHints="user_email"
            android:inputType="textPassword"
            android:hint="@string/et_enter_new_password" />

    <EditText
            style="@style/Button"
            android:autofillHints="user_email"
            android:inputType="textPassword"
            android:hint="@string/repeat_new_password" />

</LinearLayout>