<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56sp"
        android:layout_marginBottom="56sp"
        android:orientation="vertical"
        android:tag="@string/frag_change_password">

    <EditText
            android:id="@+id/et_enter_new_email"
            style="@style/Button"
            android:hint="@string/et_enter_new_email"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/et_current_password"
            style="@style/Button"
            android:hint="@string/et_enter_current_password"
            android:inputType="textPassword" />

</LinearLayout>