<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/fragment_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center"
                    android:layout_margin="14dp"
                    android:background="@drawable/iv_avatar" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@color/colorRed"
                    android:text="@string/button_new_avatar"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            <EditText
                    style="@style/Button"
                    android:autofillHints="username"
                    android:inputType="textAutoCorrect"
                    android:text="@string/et_new_nickname" />

            <EditText
                    style="@style/Button"
                    android:autofillHints="user_email"
                    android:inputType="textEmailAddress"
                    android:text="@string/et_new_email" />

            <Button
                    android:id="@+id/btn_change_password"
                    style="@style/button_settings_change"
                    android:drawableEnd="@drawable/ic_lock"
                    android:text="@string/tv_change_password"
                    android:onClick="onClickChangePasswordOrLanguageButton"/>

            <Button
                    android:id="@+id/btn_change_language"
                    style="@style/button_settings_change"
                    android:drawableEnd="@drawable/ic_globe"
                    android:text="@string/tv_change_language"
                    android:onClick="onClickChangePasswordOrLanguageButton"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>