<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background"
        android:id="@+id/fragment_registration">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_white_png"
                android:layout_marginBottom="30dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="@dimen/logo_margin"
                android:layout_marginEnd="@dimen/logo_margin"
                android:scaleType="fitCenter"
                />

        <EditText
                style="@style/Button"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail_address"
                android:textColor="@color/text_black"
                android:id="@+id/registration_email"/>

        <EditText
                style="@style/Button"
                android:inputType="textPassword"
                android:textColor="@color/text_black"
                android:hint="@string/password"
                android:id="@+id/registration_password"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="2dp"
                android:text="@string/create_account"
                android:id="@+id/btn_create_account"
                android:onClick="onClickCreateAccountOrLoginButton"/>
    </LinearLayout>

</RelativeLayout>