<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_white"
                android:layout_marginBottom="30dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="@dimen/logo_margin"
                android:layout_marginEnd="@dimen/logo_margin"
                android:scaleType="fitCenter"
                />

        <EditText
                android:id="@+id/login_email"
                style="@style/Button"
                android:textColor="@color/text_black"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress" />

        <EditText
                android:id="@+id/login_password"
                style="@style/Button"
                android:textColor="@color/text_black"
                android:hint="@string/password"
                android:inputType="textPassword" />

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="2dp"
                android:onClick="onClickCreateAccountOrLoginButton"
                android:text="@string/login_btn" />

    </LinearLayout>

</RelativeLayout>