<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/dark_background">

    <LinearLayout
            android:id="@+id/fragment_personal_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/current_profile_image_view"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:background="@drawable/iv_avatar" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@color/dark_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/publications"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="16sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count_publications"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@color/dark_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/subscribers"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="16sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count_publications"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:background="@color/dark_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/subscriptions"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="16sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count_publications"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorGrey" />

        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/personal_page_list_container"
                    android:background="@color/dark_background"
                    android:orientation="vertical">
                <ProgressBar
                        android:id="@+id/list_load_progress"
                        style="@style/Base.Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:indeterminate="true" />
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:paddingBottom="50dp"
                        android:scrollbars="none"
                        android:overScrollMode="never"
                        android:clipToPadding="false"
                        android:layout_height="match_parent"
                        android:id="@+id/pplr_pp_list"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>